/* GENERAL STRINGS */
"OK" = "OK";
"Cancel" = "Cancel";
"Delete" = "Delete";
"Rename" = "Rename";
"Actions" = "Actions";



/* SIDEBARVIEW */
"Filters" = "Filters";
"Smart Filters" = "Smart Filters";
"All Issues" = "All Issues";
"Recent Issues" = "Recent Issues";
"Tags" = "Tags";
"Add tag" = "Add tag";
"Show awards" = "Show awards";

"Rename tag" = "Rename tag";
"New name" = "New name";



/* CONTENTVIEW */
"Issues" = "Issues";

/* A button that shows a menu with the following options */
"Filter" = "Filter";
"Turn Filter On" = "Turn Filter On"; /* Enables filtering */
"Turn Filter Off" = "Turn Filter Off"; /* Disables filtering */
"Sort By" = "Sort By"; /* Adjust the order issues are shown */
"Date Created" = "Date Created"; /* Sort issues by the date they were created */
"Date Modified" = "Date Modified"; /* Sort issues by the date they were last changed */
"Sort Order" = "Sort Order";
"Newest to Oldest" = "Newest to Oldest"; /* Place newer issues before older issues */
"Oldest to Newest" = "Oldest to Newest"; /* Place older issues before newer issues */

"Status" = "Status";
"All" = "All";
"Open" = "Open";
"Closed" = "Closed";

"No tags" = "No tags";

"Low" = "Low";
"Medium" = "Medium";
"High" = "High";

/* Create a new issue */
"New Issue" = "New Issue";

/* A text placeholder, to help users search */
"Filter issues, or type # to add tags" = "Filter issues, or type # to add tags";

/* Shown as a status for closed issues */
"CLOSED" = "CLOSED";



/* DETAILSVIEW */
"Details" = "Details";

/* NOISSUEVIEW */
"No Issue Selected" = "No Issue Selected";

/* ISSUEVIEW */
"Copy Issue Title" = "Copy Issue Title";
"Close Issue" = "Close Issue";
"Re-open Issue" = "Re-open Issue";
"Delete Issue" = "Delete Issue";

/* REMINDERS */
"Reminders" = "Reminders";
"Show reminders" = "Show reminders";
"Oops!" = "Oops!";
"There was a problem setting your notification. Please check you have notifications enabled." = "There was a problem setting your notification. Please check you have notifications enabled.";
"Check Settings" = "Check Settings";
"Reminder time" = "Reminder time";

/* Fields that let the users enter details about a specific issue */
"Title" = "Title";
"Enter the issue title here" = "Enter the issue title here";
"**Modified:** %@" = "**Modified:** %@";
"**Status:** %@" = "**Status:** %@";
"Priority" = "Priority";
"Add Tags" = "Add Tags";
"Basic Information" = "Basic Information";
"Description" = "Description";
"Enter the issue description here" = "Enter the issue description here";


/* AWARDS VIEW */
"Awards" = "Awards";
"Close" = "Close";

"Locked" = "Locked";
"Unlocked: %@" = "Unlocked: %@";



/* DATA */
"New tag" = "New tag";
"New issue" = "New issue";



/* STORE */
"Upgrade Today!" = "Upgrade Today!";
"Get the most out of the app" = "Get the most out of the app";
"Fetching offers…" = "Fetching offers…";
"Sorry, there was an error loading our store." = "Sorry, there was an error loading our store.";
"Try Again" = "Try Again";
"Restore Purchases" = "Restore Purchases";
"In-app purchases are disabled" = "In-app purchases are disabled";
"You can't purchase the premium unlock because in-app purchases are disabled on this device.\n\nPlease ask whomever manages your device for assistance." = "You can't purchase the premium unlock because in-app purchases are disabled on this device.\n\nPlease ask whomever manages your device for assistance.";



/* WIDGETS */
"Up next…" = "Up next…";
"Nothing!" = "Nothing!";
"Your #1 top-priority issue." = "Your #1 top-priority issue.";
"Your most important issues." = "Your most important issues.";



/* DEBUG ONLY */
"ADD SAMPLES" = "ADD SAMPLES";
